--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </style>
 </head>
 <body>
-    <h1>Our Site is Temporarily Down</h1>
+    <h1>The Skindex is Temporarily Down</h1>
     <p>We are currently addressing a DMCA complaint which affects our entire domain. Due to this, our site is temporarily unavailable.</p>
     <p>We are working diligently to resolve the issue and appreciate your patience and understanding during this time.</p>
     <p>Please check back soon for updates.</p>
