--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <style>
         body { font-family: Arial, sans-serif; text-align: center; padding: 50px; }
         h1 { color: #333; }
-        p { color: #666; }
+        p { color: #668; }
     </style>
 </head>
 <body>
-
-    <h1>The Skindex is Temporarily Down</h1>
+    <img src="theskindex.png" alt="Site Logo" class="logo">
+    <h1>Site is Temporarily Down</h1>
     <p>We are currently addressing a DMCA complaint. Due to this, our site is temporarily unavailable.</p>
     <p>We are working diligently to resolve the issue and appreciate your patience and understanding during this time.</p>
     <p>Please check back soon for updates.</p>
