--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <p>We are currently addressing a DMCA complaint. Due to this, our site is temporarily unavailable.</p>
     <p>We are working diligently to resolve the issue and appreciate your patience and understanding during this time.</p>
     <p>Please check back soon for updates.</p>
+    <div>::CLOUDFLARE_ERROR_500S_BOX::</div>
 </body>
 </html>
