--- a/index.html
+++ b/index.html
@@ -3,19 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site Maintenance</title>
+    <title>The Skindex - Site Maintenance</title>
     <style>
         body { font-family: Arial, sans-serif; text-align: center; padding: 50px; }
         h1 { color: #333; }
         p { color: #668; }
+        .logo {
+            display: block;
+            margin: 0 auto;
+        }
+        .cf-error-token {
+            display: none;
+        }
     </style>
 </head>
 <body>
     <img src="theskindex.png" alt="Site Logo" class="logo">
-    <h1>Site is Temporarily Down</h1>
+    <h1>Our Site is Temporarily Down</h1>
     <p>We are currently addressing a DMCA complaint. Due to this, our site is temporarily unavailable.</p>
     <p>We are working diligently to resolve the issue and appreciate your patience and understanding during this time.</p>
     <p>Please check back soon for updates.</p>
-    <div>::CLOUDFLARE_ERROR_500S_BOX::</div>
+    <div class="cf-error-token">::CLOUDFLARE_ERROR_500S_BOX::</div>
 </body>
 </html>
